// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DashboardLayout /> should add new widget with line chart 1`] = `
<div
  class="react-grid-item react-draggable cssTransforms react-resizable"
  data-grid="[object Object]"
  data-testid="widget-0"
  style="transform: translate(10px,10px); width: -15px; height: 310px; position: absolute;"
>
  <div
    style="height: 100%; width: 100%; box-sizing: border-box; padding: 10px;"
  >
    <div>
      Line Chart
      <span>
        config = config
      </span>
    </div>
  </div>
  <span
    class="react-resizable-handle react-resizable-handle-se"
  />
</div>
`;

exports[`<DashboardLayout /> should match a snapshot for <DashboardLayout /> at initial state 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-2"
  >
    <div
      class="MuiBox-root MuiBox-root-3"
    >
      <div>
        File Upload
        <span />
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-4"
    >
      <div
        class="MuiBox-root MuiBox-root-6 makeStyles-buttonGroup-5"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Line Chart
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Bar Chart
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="MuiBox-root MuiBox-root-7"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            save dashboard
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="react-grid-layout DashboardLayout-reactGridLayout-1"
      style="height: 10px;"
    />
  </div>
</div>
`;

exports[`<DashboardLayout /> should match a snapshot for <DashboardLayout /> when dashboard is loaded with data 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-9"
  >
    <div
      class="MuiBox-root MuiBox-root-10"
    >
      <div>
        File Upload
        <span />
      </div>
    </div>
    <div
      class="MuiBox-root MuiBox-root-11"
    >
      <div
        class="MuiBox-root MuiBox-root-13 makeStyles-buttonGroup-12"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Line Chart
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            Bar Chart
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="MuiBox-root MuiBox-root-14"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            save dashboard
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
    <div
      class="react-grid-layout DashboardLayout-reactGridLayout-8"
      style="height: 330px;"
    >
      <div
        class="react-grid-item react-draggable cssTransforms react-resizable"
        data-grid="[object Object]"
        data-testid="widget-0"
        style="transform: translate(10px,10px); width: -12px; height: 310px; position: absolute;"
      >
        <div
          style="height: 100%; width: 100%; box-sizing: border-box; padding: 10px;"
        >
          <div>
            Bar Chart
            <span>
              config = config
            </span>
          </div>
        </div>
        <span
          class="react-resizable-handle react-resizable-handle-se"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<DashboardLayout /> should show Error while fetching data for <DashboardLayout /> if error occurred 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-20 makeStyles-root-19"
  >
    <div
      class="MuiPaper-root MuiAlert-root MuiAlert-standardError MuiPaper-elevation0"
      role="alert"
    >
      <div
        class="MuiAlert-icon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
      </div>
      <div
        class="MuiAlert-message"
      >
        Failed to load, Refresh the page
      </div>
    </div>
  </div>
</div>
`;

exports[`<DashboardLayout /> should show loader while fetching data for <DashboardLayout /> 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root-17 makeStyles-root-16"
    data-testid="loader"
  >
    <div
      class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
      role="progressbar"
      style="width: 40px; height: 40px;"
    >
      <svg
        class="MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
          cx="44"
          cy="44"
          fill="none"
          r="20.2"
          stroke-width="3.6"
        />
      </svg>
    </div>
  </div>
</div>
`;
